--- a/index.html
+++ b/index.html
@@ -4,13 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>my favorite quotes</title>
+    <title>my favorite quotations</title>
 </head>
 
 <body>
     <h1>my quotations</h1>
     <h2>online quotations manager</h2>
     <h3>0 quotation</h3>
+    <hr>
+    <form id="form">
+        <label for="quotation">favourite quotation: </label>
+        <input type="text" id="quote">
+        <label for="quote">author: </label>
+        <input type="texte" id="author">
+        <button id="submit" type="submit">submit</button>
+    </form>
 </body>
 
 </html>
