--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
         <input type="texte" id="author">
         <button id="submit" type="submit">submit</button>
     </form>
+    <div>
+        <div class="quote">
+            <p class="text">"On ne naît pas femme, on le devient."</p>
+            <p class="author">Simone de Beauvoir</p>
+        </div>
+    </div>
 </body>
 
 </html>
