--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my favorite quotations</title>
+    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -16,7 +18,7 @@
         <label for="quotation">favourite quotation: </label>
         <input type="text" id="quote">
         <label for="quote">author: </label>
-        <input type="texte" id="author">
+        <input type="text" id="author">
         <button id="submit" type="submit">submit</button>
     </form>
     <div>
