--- a/index.html
+++ b/index.html
@@ -21,12 +21,18 @@
         <input type="text" id="author">
         <button id="submit" type="submit">submit</button>
     </form>
+    
     <div>
         <div class="quote">
             <p class="text">"On ne naît pas femme, on le devient."</p>
             <p class="author">Simone de Beauvoir</p>
         </div>
     </div>
+   
+    <div class="quote-list">
+        
+    </div>
+
 </body>
 
 </html>
